# UAV_Delivery

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  NOTICE  README.md  WORKSPACE
UAV_models/: BUILD.bazel
UAV_models/moving_target/: README.md  marker_plate.mtl  moving_target.urdf
UAV_models/skydio_2/: quadrotor.urdf
config/: moving_target.yaml  quadrotor_sim.yaml  quadrotor_target_camera_visualizer.yaml
lcmtypes/: BUILD.bazel  lcmt_moving_target_actuation_command.lcm  lcmt_moving_target_state.lcm  lcmt_moving_target_teleop_command.lcm  lcmt_quadrotor_command.lcm  lcmt_quadrotor_reference.lcm  lcmt_quadrotor_state.lcm  lcmt_raruco_detection.lcm  lcmt_saved_traj.lcm  lcmt_sim_time.lcm  lcmt_timestamped_saved_traj.lcm  lcmt_trajectory_block.lcm
params/: moving_target_params.cc  moving_target_params.h  quadrotor_camera_visualizer_params.h  quadrotor_params.cc  quadrotor_params.h
src/: moving_target_controller.cc  moving_target_sim.cc  moving_target_teleop.cc  moving_target_visualizer.cc  quadrotor_hover_controller.cc  quadrotor_se3_controller.cc  quadrotor_sim.cc  quadrotor_target_camera_visualizer.cc  quadrotor_visualizer.cc  quadrotor_waypoint_trajectory.cc
systems/: diagram_utils.cc  diagram_utils.h  hover_controller.cc  hover_controller.h  lcm_driven_loop.h  lcm_systems.cc  lcm_systems.h  moving_target_controller.cc  moving_target_controller.h  moving_target_lcm_systems.cc  moving_target_lcm_systems.h  moving_target_plant.cc  moving_target_plant.h  quadrotor_plant.cc  quadrotor_plant.h  raruco_detector.cc  raruco_detector.h  reference_trajectory_unpacker.cc  reference_trajectory_unpacker.h  se3_controller.cc  se3_controller.h  sim_utils.cc  sim_utils.h  waypoint_trajectory_source.cc  waypoint_trajectory_source.h
