load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "quadrotor_params",
    srcs = ["params/quadrotor_params.cc"],
    hdrs = ["params/quadrotor_params.h"],
    deps = [
        "@drake//common/yaml:yaml_read_archive",
    ],
)

cc_library(
    name = "moving_target_params",
    srcs = ["params/moving_target_params.cc"],
    hdrs = ["params/moving_target_params.h"],
    deps = [
        "@drake//common/yaml:yaml_read_archive",
    ],
)

cc_library(
    name = "quadrotor_plant",
    srcs = ["systems/quadrotor_plant.cc"],
    hdrs = ["systems/quadrotor_plant.h"],
    deps = [
        ":quadrotor_params",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "moving_target_plant",
    srcs = ["systems/moving_target_plant.cc"],
    hdrs = ["systems/moving_target_plant.h"],
    deps = [
        ":moving_target_params",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_lcm_systems",
    srcs = ["systems/lcm_systems.cc"],
    hdrs = ["systems/lcm_systems.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common:value",
        "@drake//math",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "moving_target_lcm_systems",
    srcs = ["systems/moving_target_lcm_systems.cc"],
    hdrs = ["systems/moving_target_lcm_systems.h"],
    deps = [
        "//lcmtypes:uav_lcmtypes",
        "@drake//common:value",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_se3_controller_lib",
    srcs = ["systems/se3_controller.cc"],
    hdrs = ["systems/se3_controller.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "moving_target_controller_lib",
    srcs = ["systems/moving_target_controller.cc"],
    hdrs = ["systems/moving_target_controller.h"],
    deps = [
        ":moving_target_params",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_sim_utils",
    srcs = ["systems/sim_utils.cc"],
    hdrs = ["systems/sim_utils.h"],
    deps = [
        "@drake//systems/framework",
    ],
    data = [
        "//UAV_models:uav_files",
    ],
)

cc_library(
    name = "diagram_utils",
    srcs = ["systems/diagram_utils.cc"],
    hdrs = ["systems/diagram_utils.h"],
    deps = [
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "lcm_driven_loop",
    hdrs = ["systems/lcm_driven_loop.h"],
    deps = [
        "@drake//lcm",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
    ],
)

cc_binary(
    name = "quadrotor_sim",
    srcs = ["src/quadrotor_sim.cc"],
    data = [
        "config/quadrotor_sim.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":quadrotor_lcm_systems",
        ":quadrotor_params",
        ":quadrotor_plant",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "moving_target_sim",
    srcs = ["src/moving_target_sim.cc"],
    data = [
        "config/moving_target.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":moving_target_lcm_systems",
        ":moving_target_params",
        ":moving_target_plant",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "quadrotor_se3_controller",
    srcs = ["src/quadrotor_se3_controller.cc"],
    data = ["config/quadrotor_sim.yaml"],
    deps = [
        ":diagram_utils",
        ":lcm_driven_loop",
        ":quadrotor_se3_controller_lib",
        ":quadrotor_params",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//lcm",
        "@gflags//:gflags",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
    ],
)

cc_binary(
    name = "moving_target_controller",
    srcs = ["src/moving_target_controller.cc"],
    data = ["config/moving_target.yaml"],
    deps = [
        ":diagram_utils",
        ":lcm_driven_loop",
        ":moving_target_controller_lib",
        ":moving_target_lcm_systems",
        ":moving_target_params",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//lcm",
        "@drake//systems/framework",
        "@drake//systems/lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "moving_target_teleop",
    srcs = ["src/moving_target_teleop.cc"],
    data = ["config/moving_target.yaml"],
    deps = [
        ":moving_target_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "quadrotor_visualizer",
    srcs = ["src/quadrotor_visualizer.cc"],
    data = [
        "config/quadrotor_sim.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":quadrotor_lcm_systems",
        ":quadrotor_params",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//:drake_shared_library",
        "@drake//common/yaml:yaml_io",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "moving_target_visualizer",
    srcs = ["src/moving_target_visualizer.cc"],
    data = [
        "config/moving_target.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":moving_target_lcm_systems",
        ":moving_target_params",
        ":moving_target_plant",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//:drake_shared_library",
        "@drake//common/yaml:yaml_io",
        "@gflags//:gflags",
    ],
)
