load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "quadrotor_params",
    srcs = ["params/quadrotor_params.cc"],
    hdrs = ["params/quadrotor_params.h"],
    deps = [
        "@drake//common/yaml:yaml_read_archive",
    ],
)

cc_library(
    name = "quadrotor_lcm_systems",
    srcs = ["systems/lcm_systems.cc"],
    hdrs = ["systems/lcm_systems.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//math",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_se3_controller_lib",
    srcs = ["systems/se3_controller.cc"],
    hdrs = ["systems/se3_controller.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//math",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_waypoint_trajectory_lib",
    srcs = ["systems/waypoint_trajectory_source.cc"],
    hdrs = ["systems/waypoint_trajectory_source.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//math",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_reference_unpacker_lib",
    srcs = ["systems/reference_trajectory_unpacker.cc"],
    hdrs = ["systems/reference_trajectory_unpacker.h"],
    deps = [
        ":quadrotor_params",
        "//lcmtypes:uav_lcmtypes",
        "@drake//math",
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "quadrotor_sim_utils",
    srcs = ["systems/sim_utils.cc"],
    hdrs = ["systems/sim_utils.h"],
    deps = [
        "@drake//systems/framework",
    ],
    data = [
        "//UAV_models:uav_files",
    ],
)

cc_library(
    name = "diagram_utils",
    srcs = ["systems/diagram_utils.cc"],
    hdrs = ["systems/diagram_utils.h"],
    deps = [
        "@drake//systems/framework",
    ],
)

cc_library(
    name = "lcm_driven_loop",
    hdrs = ["systems/lcm_driven_loop.h"],
    deps = [
        "@drake//lcm",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
    ],
)

cc_binary(
    name = "quadrotor_sim",
    srcs = ["src/quadrotor_sim.cc"],
    data = [
        "config/quadrotor_sim.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":quadrotor_lcm_systems",
        ":quadrotor_params",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//math",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@drake//multibody/tree",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "quadrotor_se3_controller",
    srcs = ["src/quadrotor_se3_controller.cc"],
    data = ["config/quadrotor_sim.yaml"],
    deps = [
        ":diagram_utils",
        ":lcm_driven_loop",
        ":quadrotor_se3_controller_lib",
        ":quadrotor_params",
        ":quadrotor_reference_unpacker_lib",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//lcm",
        "@gflags//:gflags",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
    ],
)

cc_binary(
    name = "quadrotor_waypoint_trajectory",
    srcs = ["src/quadrotor_waypoint_trajectory.cc"],
    data = ["config/quadrotor_sim.yaml"],
    deps = [
        ":diagram_utils",
        ":lcm_driven_loop",
        ":quadrotor_params",
        ":quadrotor_sim_utils",
        ":quadrotor_waypoint_trajectory_lib",
        "//lcmtypes:uav_lcmtypes",
        "@drake//common/yaml:yaml_io",
        "@drake//lcm",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework",
        "@drake//systems/lcm",
        "@gflags//:gflags",
    ],
)

cc_binary(
    name = "quadrotor_visualizer",
    srcs = ["src/quadrotor_visualizer.cc"],
    data = [
        "config/quadrotor_sim.yaml",
        "//UAV_models:uav_files",
    ],
    deps = [
        ":diagram_utils",
        ":quadrotor_lcm_systems",
        ":quadrotor_params",
        ":quadrotor_sim_utils",
        "//lcmtypes:uav_lcmtypes",
        "@drake//:drake_shared_library",
        "@drake//common/yaml:yaml_io",
        "@gflags//:gflags",
    ],
)
