package(default_visibility = ["//visibility:public"])

filegroup(
    name = "uav_files",
    srcs = [
        ":skydio_2",
        ":moving_target",
    ],
)

filegroup(
    name = "skydio_2",
    srcs = glob([
        "skydio_2/**",
    ]),
)

filegroup(
    name = "moving_target",
    srcs = glob([
        "moving_target/**",
    ]),
)
